# CTU-codes

./: .gitignore  LICENSE.md  README.md  VS-code-extensions.txt  departments.md  rozvrhy_dump.json  schedule.md  scholarship.md  sports.md  study-department.md  tools.md
ALG/: README.md  du1.c
ALG/ZK/: main.cpp
ALG/du01/: README.md  main  main.c
ALG/du02/: main.cpp  test.sh
ALG/du03/: a.out  main  main.cpp  test.sh
ALG/du04/: README.md  gen  gen.cpp  main.cpp
ALG/du05/: main.cpp
ALG/du06/: main  main.cpp
ALG/du07/: main.cpp
ALG/du08/: main.cpp
APO/: README.md  main.s
APO/bubble-sort/: README.md  main.s
APO/hw02/: main.c
BSY/: 02.md  03.md  04.md  06.md  07.md  09.md  README.md  password_rotator.sh  report.md
BSY/bonus/: README.md  notes.md
BSY/task09/: solve02.py  test.txt
FIM1/: README.md
FUP/: SedmaDatatypes.hs  cv08.hs  cv1.scm  du04.hs
FUP/cv07/: cv07.hs
FUP/cv10/: Map.hs
FUP/cv11/: suffix.hs
FUP/du05/: SedmaBase.hs  SedmaReplay.hi  SedmaReplay.hs  aiPlayer
FUP/hw01/: du01.scm
FUP/hw02/: du02.ss
FUP/hw05/: SedmaBase.hi  SedmaBase.hs  SedmaDatatypes.hi  SedmaDecks.hs  SedmaGamble.hi  SedmaGamble.hs  aiPlayer.hi  aiPlayer.hs
FUP/lab10/: map.ss
IBEA/: README.md
IBEA/Frekvenční  Analýza/: English.fa
IBEA/Transpozice/: index.html  styles.css
IBEA/sem02/: task01.md
JAVA/du1/: pom.xml
JAVA/du3/: pom.xml
JAVA/du5/: pom.xml
KAJ/: style.css
KAJ/c7/: main.html
KAJ/lab07/: style.css
KBE/: README.md
KBE/blockchain/: README.md  SOLUTION.md  bitaddress.org.html  keypairs.json  main.go
KBE/crypto/: .gitignore
KBE/sql-injection/: README.md  WRITEUP.md  all_users.csv  hast.txt  main.go
KBE/tls/: SOLUTION.md  agent.go  cube_root.go  diffie_hellman.go  dsa.go  go.mod  mitm.go  readme.md  rsa.go
KO/hw02/: main.py
KO/hw03/: main.py
KO/lab03/: hw1.py
KO/lab05/: README.md  Tents in the Forest.ipynb  settle_up_models.ipynb
MKR/: README.md
OPT/: README.md
OPT/01_mzda_a_teplota/: temps_fit_model.m  wages_fit_model.m
OPT/02_ar_model/: ar_fit_model.m  ar_predict.m  du2.m  ident_autoreg_model.aux  ident_autoreg_model.fdb_latexmk  ident_autoreg_model.fls  ident_autoreg_model.out  ident_autoreg_model.tex  solve_ls.m
OPT/03_pca/: PCA.aux  PCA.fdb_latexmk  PCA.fls  PCA.out  PCA.tex  connected_points.txt  data_A.mat  show_motion.m  show_motion2.m  task1.m  task2.m  walk1.txt
OPT/04_circle/: 04_circle.tex  compute_criterion.m  dist.m  fit_circle.m  main.m  make_GN_iter.m  make_LM_iter.m
OPT/05_quadric/: 05_quadric.aux  05_quadric.fdb_latexmk  05_quadric.fls  05_quadric.out  05_quadric.tex  assignment_quadric.m  dist.m  fit_circle.m  get_data.sh  make_GN_iter.m  point_quadric.m  test_data.mat
OPT/06_linprog/: linprog.tex
OSY/du03/: pedefs.sh
OSY/du04/: forkpipe.c  nd.h  nsd.c  nsd_main.c  osy04.tgz
OSY/du05/: bad.in  osy05.tgz
OSY/du07/: hexconv.c
OSY/du13_busybox/: makemachine.sh
OSY/hw02/: README.md  lolol.sh
OSY/hw03/: README.md  pedefs.sh
OSY/hw04/: Makefile  nd.c  nsd.h
OSY/hw05/: Makefile  in.in  prod-cons.c
OSY/hw08/: hexconv.c
OSY/hw11/: README.md  mem_alloc.cc
PAL/: README.md
PAL/1mstcluste/: CMakeLists.txt  main.cpp
PAL/2Express/: CMakeLists.txt  Makefile  main  main.cpp
PAL/3IsoFewCyc/: CMakeLists.txt
PAL/4GenEng/: CMakeLists.txt  main  main.cpp
PAL/5LCGvalue/: CMakeLists.txt  main  main.cpp
PAL/6SplayTree/: CMakeLists.txt  main  main.cpp
PAL/Test/: CMakeLists.txt  main  main.cpp
PAL/minibus/: Component.h  Node.cpp  Node.h  main.cpp
PDV/cv03/code/: CMakeLists.txt  integrate.cpp  integrate.h  main.cpp  test.cpp
PDV/cv04/: CMakeLists.txt  lockBased.h  lockFree.h  main.cpp  sequential.h
PDV/cv05/: CMakeLists.txt  decompose.cpp  decompose.h  main.cpp
PDV/cv06/: CMakeLists.txt  generators.h  sorting.cpp
PDV/cv07/: a.out  autovec.cpp  cond.cpp  lzcnt.cpp  popcnt.cpp  prob.cpp
PDV/cv08/: CMakeLists.txt  main.cpp  multiply.cpp  multiply.h  sparse.h
PDV/hw02/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h  main.cpp
PDV/hw03/: CMakeLists.txt  SumsOfVectors.cpp  SumsOfVectors.h  main.cpp
PDV/hw03/_dataGenerator/: DataGenerator.cpp  DataGenerator.h
PDV/hw03/_executor/: Executor.cpp  Executor.h
PDV/hw03/_outputGenerator/: TextTable.h
PDV/hw04/: CMakeLists.txt  bst_tree.cpp  bst_tree.h  main.cpp  tests.h
PDV/hw05/: CMakeLists.txt  main.cpp  params.h  query.h
PDV/hw06/: CMakeLists.txt  main.cpp  sort.cpp  sort.h
PJC/: README.md
PJC/autocorrect/: CMakeLists.txt  README.md  autocorrect.cpp  autocorrect.hpp  benchmark-autocorrect.cpp  catch.hpp  cli.cpp  test-helpers.cpp  test-helpers.hpp  tests-autocorrect.cpp
PJC/flatset/: CMakeLists.txt  flatset.hpp  tests-flatset-basic.cpp  tests-flatset-complexity.cpp  tests-flatset-full.cpp  tests-helpers.cpp  tests-helpers.hpp
PJC/list/: CMakeLists.txt  list.cpp  list.hpp  test-helpers.cpp  test-helpers.hpp  tests-list-01.cpp  tests-list-02.cpp  tests-list-03.cpp  tests-list-04.cpp  tests-list-05.cpp
PJC/main_hw/: CMakeLists.txt  catch.hpp  tests-list-01.cpp  tests-list-02.cpp  (+5 more)
PJC/symcalc/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  app.cpp  app.hpp  cmdline.cpp  cmdline.hpp  expr.cpp  expr.hpp  expr_impl.cpp  expr_impl.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
PJC/symcalc/tests/: runner.hpp  runner_direct.cpp  runner_subprocess.cpp  subprocess.hpp  subprocess_posix.cpp  subprocess_windows.cpp  tests-cmdline.cpp  tests-expr-long.cpp  tests-expr.cpp  tests-generated.cpp  tests-tokenizer.cpp  tests-utils.cpp  tests.hpp
PJC/tiny-06/: CMakeLists.txt  tests-tiny-06.cpp  tiny-06.cpp  tiny-06.hpp
PJC/tiny-09/: CMakeLists.txt  array.hpp  pjc-traits.hpp  tests-helpers.cpp  tests-helpers.hpp  tests-tiny-09.cpp  vector.hpp
PJC/trie/: CMakeLists.txt  catch.hpp  test-helpers.cpp  test-helpers.hpp  tests-trie-01.cpp  tests-trie-02.cpp  tests-trie-03.cpp  tests-trie-04.cpp  tests-trie-05.cpp  trie.cpp  trie.hpp
PJV/: README.txt
PRP/: README.md  README.txt
PSI/: Client.cpp  README.md  Server.cpp
PST/: README.md
RPH/: README.txt
RPZ/: README.md
SAN/: README.md
TAL/: README.md
(+926 files in other folders)
